build(all): preparation setting for msa