@@ -1,56 +1,141 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.0.4'
+	id 'java-library'
+	id 'org.springframework.boot' version '3.1.4'
 	id 'io.spring.dependency-management' version '1.1.0'
 	id 'org.asciidoctor.convert' version '2.2.0'
 }
 
-group = 'com.self'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = JavaVersion.VERSION_17
+var commonProject = project(commonModule)
 
-configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
+allprojects{
+	apply plugin: 'java'
+	apply plugin: 'java-library'
+	apply plugin: 'org.springframework.boot'
+	apply plugin: 'io.spring.dependency-management'
+	apply plugin: 'org.asciidoctor.convert'
+
+	group = 'com.self'
+	version = '0.0.1-SNAPSHOT'
+	sourceCompatibility = JavaVersion.VERSION_21
+	targetCompatibility = JavaVersion.VERSION_21
+
+	configurations {
+		compileOnly {
+			extendsFrom annotationProcessor
+		}
+	}
+
+	repositories {
+		mavenCentral()
+	}
+
+	compileJava {
+		options.compilerArgs += [
+				'--enable-preview',
+				'-Amapstruct.defaultComponentModel=spring'
+		]
+
+	}
+
+// Enable Java Preview (2)
+	compileTestJava {
+		options.compilerArgs += [
+				'--enable-preview',
+//                '-Amapstruct.defaultComponentModel=spring'
+		]
+	}
+
+// Enable Java Preview (3)
+	test {
+		useJUnitPlatform()
+		jvmArgs([
+				'--enable-preview',
+//                '-Amapstruct.defaultComponentModel=spring'
+				'-Dspring.profiles.active=local'
+		])
+	}
+
+
+	tasks.named('test') {
+		useJUnitPlatform()
+	}
+}
+subprojects{
+	dependencies {
+		implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+		implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+		implementation 'org.springframework.boot:spring-boot-starter-security'
+		implementation 'org.springframework.boot:spring-boot-starter-validation'
+		implementation 'org.springframework.boot:spring-boot-starter-web'
+		implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
+		implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
+		implementation 'org.flywaydb:flyway-core:9.16.0'
+		implementation 'org.jetbrains:annotations:24.0.1'
+
+		compileOnly 'org.projectlombok:lombok'
+		developmentOnly 'org.springframework.boot:spring-boot-devtools'
+		runtimeOnly 'org.postgresql:postgresql'
+
+		annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+		annotationProcessor 'org.projectlombok:lombok'
+
+		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+		testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+		testImplementation 'org.springframework.security:spring-security-test'
+
+		// jwt
+		implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+		implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+		implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	}
 }
 
-repositories {
-	mavenCentral()
+project(commonModule) {
+	dependencies {
+		// NTP
+		implementation 'commons-net:commons-net:3.9.0'
+	}
 }
 
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
-	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
-	implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
-	implementation 'org.flywaydb:flyway-core:9.16.0'
-	implementation 'org.jetbrains:annotations:24.0.1'
-
-	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'org.postgresql:postgresql'
-
-	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-	annotationProcessor 'org.projectlombok:lombok'
-
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
-	testImplementation 'org.springframework.security:spring-security-test'
-
-	// jwt
-	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
-	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
-
-	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+project(jpaCoreModule) {
+	dependencies {
+		implementation commonProject
+		api 'org.springframework.boot:spring-boot-starter-data-jpa'
+	}
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
+project(mongoCoreModule) {
+	dependencies {
+		implementation commonProject
+		api 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	}
+}
+
+project(globalExceptionHandlerCoreModule) {
+	dependencies {
+		implementation commonProject
+	}
+}
+
+project(awsS3CoreModule) {
+	dependencies {
+		implementation commonProject
+
+		implementation 'org.springframework.boot:spring-boot'
+		api 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+	}
+}
+
+project(securityModule) {
+	dependencies {
+		implementation commonProject
+
+		implementation 'org.jetbrains:annotations:24.0.1'
+		implementation 'org.springframework.boot:spring-boot-starter-security'
+		implementation 'org.springframework.boot:spring-boot'
+
+		implementation 'com.google.code.gson:gson:2.10.1'
+
+	}
 }
